# documentation

api/GoPro/: openapi.json
microcontrollers/ChargeByte/CME Evaluation Board - Datasheet & Hardware Documentation/: CME_EVB_V0R5b.step  CME_EVB_V0R6a.STEP
microcontrollers/ChargeByte/Charge Control F - Datasheet & Hardware Documentation/: CCF_DIN-Rail_V0R1a.STEP  CCF_PCB_V0R1a.STEP
microcontrollers/ChargeByte/Charge Module E - Datasheet & Hardware Documentation/: CMS_CME.step
microcontrollers/ChargeByte/Firmware Releases & User Guides/CME - Release 1.0.1/chargebyte_CME_release_v1.0.0_documentation/: CME_UDS.xml  multiple_cme_modules.dbc
microcontrollers/ChargeByte/Firmware Releases & User Guides/CME - Release 1.0.1/chargebyte_CME_release_v1.0.1_release_files/: ISC_CME.dbc  chargebyte_cme_release_1.0.1_encrypted_Stack.srec  release_notes.txt  release_notes_cmx_tool.txt  release_notes_dbc.txt
microcontrollers/ChargeByte/Firmware Releases & User Guides/CME - Release 1.1.0/: CME_UDS_for_1.1.0.xml
microcontrollers/ChargeByte/Firmware Releases & User Guides/FW Release 2.0.0/: CME_UDS_release_2.0.0.xml
microcontrollers/ChargeByte/Firmware Releases & User Guides/FW Release 2.1.0/: CME_UDS_release_2.1.0.xml
microcontrollers/ChargeByte/Firmware Releases & User Guides/FW Release 2.2.0/: CME_UDS_release_2.2.0.xml
microcontrollers/ChargeByte/Phython CAN Restbus Simulations/Restbus_CMS_CME_code_example/: CMS_CME.py  requirements.txt
microcontrollers/ChargeByte/Phython CAN Restbus Simulations/Restbus_CMS_CME_code_example/CME/: CME.py  ISC_CME.dbc
(+164 files in other folders)
